Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,10 +47,15 @@ keywords = {aggregation, safety verification, constraint propagation, generalize
 location = {Pittsburgh, Pennsylvania, USA},
 series = {HSCC '17}}
 
-@phdthesis{althoffm,
-author = {Althoff, Matthias},
-year = {2010},
-month = {07},
-pages = {},
-title = {Reachability Analysis and its Application to the Safety Assessment of Autonomous Cars}
+@ARTICLE{althoff,  author={M. {Althoff} and J. M. {Dolan}},  journal={IEEE Transactions on Robotics},   title={Online Verification of Automated Road Vehicles Using Reachability Analysis},   year={2014},  volume={30},  number={4},  pages={903-918},  doi={10.1109/TRO.2014.2312453}}
+
+@misc{cuda,
+  author = {{NVIDIA Corporation}},
+  keywords = {CUDA},
+  url = {https://docs.nvidia.com/cuda/cuda-c-programming-guide/},
+  note = {Version 11.1.1},
+  title = {{NVIDIA CUDA C} Programming Guide},
+  year = 2020,
+  date = October 27, 2020
 }
+
